[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/SelectorImagen.gd" type="Script" id=1]

[node name="SelectorImagen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anterior" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 20.0
margin_bottom = 10.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Posterior" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_bottom = 10.0
text = ">"

[connection signal="pressed" from="Anterior" to="." method="_on_Anterior_pressed"]
[connection signal="pressed" from="Posterior" to="." method="_on_Posterior_pressed"]
